[gd_scene load_steps=6 format=2]

[ext_resource path="res://System/UI/GamesMenu.gd" type="Script" id=1]
[ext_resource path="res://System/UI/Themes/GamesMenu.tres" type="Theme" id=2]
[ext_resource path="res://System/UI/Themes/ScriptDebugger.tres" type="Theme" id=3]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.345098, 0.345098, 0.345098, 1, 0.564706, 0.564706, 0.564706, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="GamesMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 254.0
margin_bottom = 384.0
theme = ExtResource( 2 )

[node name="GameChooserBG" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.847059, 0.847059, 0.847059, 1 )

[node name="MainLabel" type="Label" parent="Control"]
unique_name_in_owner = true
margin_left = 9.0
margin_top = 4.0
margin_right = 243.0
margin_bottom = 17.0
text = "GodotWright"
align = 1

[node name="GamesBG" type="TextureRect" parent="Control"]
margin_left = 6.0
margin_top = 20.0
margin_right = 246.0
margin_bottom = 206.0
texture = SubResource( 2 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
margin_left = 23.0
margin_top = 23.0
margin_right = 230.0
margin_bottom = 39.0
alignment = 1

[node name="BuiltinGames" type="Button" parent="Control/HBoxContainer"]
margin_left = 17.0
margin_right = 94.0
margin_bottom = 16.0
text = "Built-in Games"

[node name="ChooseGameDir" type="Button" parent="Control/HBoxContainer"]
margin_left = 98.0
margin_right = 190.0
margin_bottom = 16.0
text = "Choose Game Dir"

[node name="PlayButton" type="Button" parent="Control"]
visible = false
margin_left = 101.0
margin_top = 188.0
margin_right = 144.0
margin_bottom = 203.0
text = "Play"

[node name="ItemList" type="ItemList" parent="Control"]
margin_left = 21.0
margin_top = 44.0
margin_right = 231.0
margin_bottom = 186.0

[node name="Label3" type="Label" parent="Control"]
margin_left = 38.0
margin_top = 211.0
margin_right = 155.0
margin_bottom = 239.0
text = "Choose a test script"

[node name="ScrollContainer2" type="ScrollContainer" parent="Control"]
margin_left = 24.0
margin_top = 232.0
margin_right = 228.0
margin_bottom = 377.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ScrollContainer2"]

[node name="ChooseGameDirDialog" type="FileDialog" parent="Control"]
margin_top = 20.0
margin_right = 416.0
margin_bottom = 370.0
rect_min_size = Vector2( 256, 140 )
theme = ExtResource( 3 )
window_title = "Choose Games Folder"
resizable = true
mode_overrides_title = false
mode = 2
access = 2
show_hidden_files = true
